--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<title space title>
-
 <html><body>
     <h1 style="background-color:rgba(56, 204, 27, 0.5);">art book</h1>
 
@@ -16,7 +14,7 @@
     <div class="search-bar  mx-auto"></div>
 
 
-
+ <title>space</title>
 
 
     <div class="selection"></div>
