--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<index.html></index.html>
+<title>space</title>
+
 
 <html><body>
     <h1 style="background-color:rgba(56, 204, 27, 0.5);">art book</h1>
@@ -13,7 +16,6 @@
     <body></body>
 
     <div class="search-bar  mx-auto"></div>
-
 
 
 
