--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <html><body>
-    <h1 style="background-color:rgba(56, 204, 27, 0.5);">art book</h1>
+    <h1 style="background-color:rgba(0, 0, 0, 0.5);">space</h1>
 
     <form accept=""></form>
     <div class="mx-auto " style="width: 500px;">
@@ -42,7 +42,7 @@ search-bar {
 
 
 body {
-background-color: rgb(215, 250, 255);
+background-color: rgb(255, 255, 255);
 }
 
 a {
@@ -50,14 +50,14 @@ a {
 }
 
 a {
-    background-color: rgb(0, 255, 13);
+    background-color: rgb(231, 231, 231);
     display: inline-block;
     padding-bottom: 50px;  
     text-decoration: none;
 }
 
 h1 {
-    color: rgb(0, 255, 0);
+    color: rgb(231, 231, 231);
     text-align: center;
     font-size: 70px;
     
