--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 
     <div class="selection"></div>
-<a href="default.asp" target="_blank">업로드</a>
+<a href="" target="_blank">글쓰기</a>
 <div></div>
-<a href="3" target="_blank">내계정</a>
+<a href="https://bearty1214.github.io/artbooks/" target="_blank">로그인</a>
 <a></a>
 
 <style>
@@ -49,12 +49,6 @@ a {
     font-size: 50px;
 }
 
-a {
-    background-color: rgb(231, 231, 231);
-    display: inline-block;
-    padding-bottom: 50px;  
-    text-decoration: none;
-}
 
 h1 {
     color: rgb(231, 231, 231);
@@ -67,3 +61,4 @@ h1 {
 
 </style>
 </body></html>
+
