--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="selection"></div>
 <a href="" target="_blank">글쓰기</a>
 <div></div>
-<a href="https://bearty1214.github.io/artbooks/" target="_blank">로그인</a>
+<a href="https://bearty1214.github.io/spacelogin/" target="_blank">로그인</a>
 <a></a>
 
 <style>
@@ -32,33 +32,4 @@ search-bar {
     
 }
 
-
-
-
-
-
-
-
-
-
-body {
-background-color: rgb(255, 255, 255);
-}
-
-a {
-    font-size: 50px;
-}
-
-
-h1 {
-    color: rgb(231, 231, 231);
-    text-align: center;
-    font-size: 70px;
-    
-}
-
-
-
-</style>
-</body></html>
 
