--- a/index.html
+++ b/index.html
@@ -20,16 +20,62 @@
 
 
     <div class="selection"></div>
-<a href="" target="_blank">글쓰기</a>
-<div></div>
-<a href="https://bearty1214.github.io/spacelogin/" target="_blank">로그인</a>
 <a></a>
+<div class="hhh"></div>
+<div class="Li">
+<h6><Li>starship LIVE& star base</Li></h6>
+<Li><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mhJRzQsLZGg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></Li>
+<h6><Li>Crew-5 Mission | Launch</Li></h6>
+<Li><iframe width="560" height="315" src="https://www.youtube.com/embed/5EwW8ZkArL4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></Li>
+<h6><Li>Starlink Mission</Li></h6>
+<Li><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wcq7xiTOPRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></Li>
+
+</div>
+
+
 
 <style>
 
 search-bar {
     width: 500px;
+    position: sticky;
+}
+
+
+
+Li {
+    position: relative;
+    top: 10px;
+    content: normal;
     
 }
+
+h6{
+    font-size: 45px;
+    color: cornflowerblue;
+    font-weight:900;
+}
+
+
+
+
+body {
+background-color: rgb(255, 255, 255);
+}
+
+
+
+
+h1 {
+    color: rgb(231, 231, 231);
+    text-align: center;
+    font-size: 70px;
+    
+}
+
+
+
+</style>
+</body></html>
 
 
