--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <form accept=""></form>
     <div class="mx-auto " style="width: 500px;">
         <form action="https://www.google.co.kr/search" method="get"></form>
-        <search-bar><input name="q"type="text" class="rounded-pill form-control mb-3" placeholder="제목을입력하세요." aria-label="Recipient's username" aria-describedby="button-addon2"></search-bar>
+        <search-bar><input name=""type="text" class="rounded-pill form-control mb-3" placeholder="제목을입력하세요." aria-label="Recipient's username" aria-describedby="button-addon2"></search-bar>
     </div>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -23,11 +23,14 @@
 <a></a>
 <div class="hhh"></div>
 <div class="Li">
+    <h6><Li>event Live</Li></h6>
+<Li><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/CMLD0Lp0JBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></Li>
 <h6><Li>starship LIVE& star base</Li></h6>
-<Li><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mhJRzQsLZGg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></Li>
+<Li><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mhJRzQsLZGg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/cOmmvhDQ2HM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></Li>
 <h6><Li>Crew-5 Mission | Launch</Li></h6>
 <Li><iframe width="560" height="315" src="https://www.youtube.com/embed/5EwW8ZkArL4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></Li>
-<h6><Li>Starlink Mission</Li></h6>
+<h6><Li>Star link Mission</Li></h6>
 <Li><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wcq7xiTOPRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></Li>
 
 </div>
@@ -47,7 +50,7 @@ Li {
     position: relative;
     top: 10px;
     content: normal;
-    
+    border: 2px double   rebeccapurple;
 }
 
 h6{
@@ -60,17 +63,20 @@ h6{
 
 
 body {
-background-color: rgb(255, 255, 255);
+background-color: rgba(219, 219, 219, 0.315);
 }
 
 
 
 
 h1 {
-    color: rgb(231, 231, 231);
+    color: rgba(145, 54, 150, 0.986);
     text-align: center;
-    font-size: 70px;
-    
+    font-size: 100px;
+    font-weight: 900;
+    font-style: oblique;
+    top: 50px;
+    display: grid;
 }
 
 
