--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     <ul>
                         <il>
                             <div1>
-                            <a href="#">starship</a>
-                            <a href="#">James webb</a>
+                            <a href="https://bearty1214.github.io/space/">home</a>
+                            <a href="#">community</a>
                             <a href="https://www.nasaspaceflight.com/">star link</a>
                             <a href="https://www.nasaspaceflight.com/">space news</a>
                         </div1>
@@ -31,7 +31,8 @@
     <form accept=""></form>
     <div class="mx-auto " style="width: 500px;">
         <form action="https://www.google.co.kr/search" method="get"></form>
-        <search-bar><input name=""type="text" class="rounded-pill form-control mb-3" placeholder="제목을입력하세요." aria-label="Recipient's username" aria-describedby="button-addon2"></search-bar>
+        <search-bar><input name="q"type="text" class="rounded-pill form-control mb-3" placeholder="제목을입력하세요." aria-label="Recipient's username" aria-describedby="button-addon2"></search-bar>
+    
     </div>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -48,9 +49,11 @@
 <div class="Li">
     <h6><Li>event Live</Li></h6>
 <Li><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/CMLD0Lp0JBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/NIgS3dPAbw0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></Li>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/kZEuwBMzR3Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></Li>
 <h6><Li>ISS[international space station]</Li></h6>
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/86YLFOog4GM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<Li><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/86YLFOog4GM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Y1qQZbTF8iQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ddZu_1Z3BAc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></Li>
 <h6><Li>starship LIVE& star base</Li></h6>
 <Li><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mhJRzQsLZGg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/cOmmvhDQ2HM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></Li>
@@ -133,6 +136,9 @@ div1 {
     background-color: rgba(255, 213, 121, 0.726);
     font-size: 30px;
 }
+
+
+
+
 </style>
 </body></html>
-
