--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <il>
                             <div1>
                             <a href="https://bearty1214.github.io/space/">home</a>
-                            <a href="#">community</a>
+                            <a href="https://bearty1214.github.io/spacecommunity/">community</a>
                             <a href="https://www.nasaspaceflight.com/">star link</a>
                             <a href="https://www.nasaspaceflight.com/">space news</a>
                         </div1>
